fixed margin, fixed gap, begining movement

--- a/style.css
+++ b/style.css
@@ -1,12 +1,14 @@
 
 body{
     background-color: black;
+    margin: 0px;
 }
 
 .row div{
     width:20px;
     height: 20px;
     display: inline-block;
+    vertical-align: top;
 }
 
 .brick{
@@ -14,14 +16,19 @@ body{
 }
 .coin{
     background: url(/advancedJS/Pacman/pacmanImg/pacmanCoin.gif);
-    background-size: 18px;
+    background-size: 16px;
     background-repeat: no-repeat;
     background-position: center;
 }
 
-.pacman{
+#pacman{
     background: url(/advancedJS/Pacman/pacmanImg/pacmanPac.gif);
     background-size: 20px;
     background-repeat: no-repeat;
     background-position: center;
+    height: 20px;
+    width: 20px;
+    position: absolute;
+    top: 20px;
+    left: 20px;
 }
